New query method for tags.
